runtime-policies/privileged/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: cluster-policy-deny-privileged-flag
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: >
        object.kind != 'Pod' || object.spec.containers.all(container,
        !(has(container.securityContext)) ||
        (
          (!(has(container.securityContext.privileged)) || container.securityContext.privileged != true) &&
          (!(has(container.securityContext.capabilities)) || !(has(container.securityContext.capabilities.add)) ||
          container.securityContext.capabilities.add.all(cap, cap != 'SYS_ADMIN')))
        )
      message: "Pod has one or more privileged container.(see more at https://kubescape.io/docs/controls/c-0057/)"
    - expression: >
        ['Deployment','ReplicaSet','DaemonSet','StatefulSet', 'Job'].all(kind, object.kind != kind) || object.spec.template.spec.containers.all(container,
        !(has(container.securityContext)) ||
        (
          (!(has(container.securityContext.privileged)) || container.securityContext.privileged != true) &&
          (!(has(container.securityContext.capabilities)) || !(has(container.securityContext.capabilities.add)) ||
          container.securityContext.capabilities.add.all(cap, cap != 'SYS_ADMIN')))
        )
      message: "Workloads has one or more privileged container.(see more at https://kubescape.io/docs/controls/c-0057/)"
    - expression: >
        object.kind != 'CronJob' || object.spec.jobTemplate.spec.template.spec.containers.all(container,
        !(has(container.securityContext)) ||
        (
          (!(has(container.securityContext.privileged)) || container.securityContext.privileged != true) &&
          (!(has(container.securityContext.capabilities)) || !(has(container.securityContext.capabilities.add)) ||
          container.securityContext.capabilities.add.all(cap, cap != 'SYS_ADMIN')))
        )
      message: "CronJob has one or more privileged container.(see more at https://kubescape.io/docs/controls/c-0057/)"
